--- a/Baliga_Oscar_Final_Project.qmd
+++ b/Baliga_Oscar_Final_Project.qmd
@@ -43,23 +43,32 @@ library(naniar)
 bomber_data <- read.csv("data/operations.csv")
 ```
 
-## Data Source
+## Introduction to the Data
 
-This dataset consists of digitized paper mission reports from World War II, developed by Lt Col Jenns Robertson of the US Air Force. The records include data from U.S. and Royal Air Force missions, as well as contributions from Australian, New Zealand, and South African air forces. The dataset captures a live-action sequence of air warfare from 1939 to 1945^[[Link to Dataset](https://www.kaggle.com/datasets/usaf/world-war-ii?resource=download)]
+### Data Source
 
-## Why This Data
+This dataset consists of digitized paper mission reports from World War II, developed by Lt Col Jenns Robertson of the US Air Force. The records include data from U.S. and Royal Air Force missions, as well as contributions from Australian, New Zealand, and South African air forces. The dataset captures a live-action sequence of air warfare from 1939 to 1945^[[Link to Dataset. Accessed on 11/05/24.](https://www.kaggle.com/datasets/usaf/world-war-ii?resource=download)]
+
+### Why This Data
 
 As a double major in Data Science and History, I am fascinated by the intersection of these two fields. Analyzing historical data from significant events like World War II allows me to engage with history from a new perspective. The digitized mission reports provide opportunities to uncover patterns that traditional methods might overlook. I can investigate how factors such as altitude and aircraft type impacted mission outcomes. This approach not only enhances my understanding of military history but also develops my data analysis skills. Ultimately, I aim to provide new insights into World War II that can inform both academic and public discourse.
 
-## Data Quality & Complexity Check
+### Data Quality & Complexity Check
 
 Before conducting any analysis, a quality check on the dataset will be necessary. Key aspects include: 
-- **Completeness**: Identifying if any critical information, such as mission dates or locations, is missing. 
-- **Consistency**: Checking for uniformity in data entries, particularly in conflict names and geographic locations. 
-- **Validity**: Ensuring that the recorded dates and mission outcomes conform to expected formats and categories. 
-- **Complexity**: The dataset includes various data elements that may require careful handling to ensure accurate analysis, especially when merging with other datasets or conducting time series analyses.
 
-## Potential Data Issues
+```
+- **Completeness**: Identifying if any critical information, such as mission dates or locations, is missing. 
+
+- **Consistency**: Checking for uniformity in data entries, particularly in conflict names and geographic locations. 
+
+- **Validity**: Ensuring that the recorded dates and mission outcomes conform to expected formats and categories. 
+
+- **Complexity**: The dataset includes various data elements that may require careful handling to ensure accurate analysis, especially when merging with other datasets or conducting time series analyses.
+```
+
+
+### Potential Data Issues
 
 Several potential issues may affect the usability of this dataset:
 
@@ -469,6 +478,33 @@ bomber_data |>
 
 -   **Bias in Data Collection**: The dataset may reflect biases based on the documentation practices of the time or the focus on certain operations over others. Furthermore, many record of this age may have been lost/damaged during combat or during the period between the end of WW2 and digitization of the dataset.
 
-## Misc
+### Misc
 
 The dataset offers a unique opportunity to understand the operational history of air forces during WWII. It serves not only as a historical record but also as a potential source for analyzing broader themes such as technological advancements in warfare and international military collaboration.
+
+## Reasearch
+
+### Guiding Question:
+
+How did allied bombing operations differ between different time periods, air forces, theaters, and tactical strategies.
+
+### Overarall Distribution of Bombing activities during the War
+
+This map showcases the cumulative bombing damage wrought upon the Axis Powers by observing the locations bombed. The dots vary in size by the weight of bombs dropped and vary in color by which country the attack belonged to.
+
+```{r}
+bomber_data_filtered_by_long_lat <- bomber_data |>
+  mutate(Country = ifelse(is.na(Country), "Not Stated", Country)) |>
+  filter(
+    between(Target.Latitude, -90, 90) &
+    between(Target.Longitude, -180, 180)
+  ) |>
+
+world_map <- map_data("world")
+ggplot() +
+  mutate(Country = ifelse(is.na(Country), "Not Stated", Country))
+  geom_polygon(data = world_map, aes(x = long, y = lat, group = group), fill = "gray90") +
+  geom_point(data = bomber_data_filtered_by_long_lat, aes(x = Target.Longitude, y = Target.Latitude), color = Country) +
+  coord_map()
+```
+
