finished big map

--- a/Baliga_Oscar_Final_Project.qmd
+++ b/Baliga_Oscar_Final_Project.qmd
@@ -38,6 +38,8 @@ library(knitr)
 library(rmarkdown)
 library(tidyverse)
 library(naniar)
+library(maps)
+library(plotly)
 
 #Load data
 bomber_data <- read.csv("data/operations.csv")
@@ -490,21 +492,35 @@ How did allied bombing operations differ between different time periods, air for
 
 ### Overarall Distribution of Bombing activities during the War
 
-This map showcases the cumulative bombing damage wrought upon the Axis Powers by observing the locations bombed. The dots vary in size by the weight of bombs dropped and vary in color by which country the attack belonged to.
+This map showcases the cumulative bombing damage wrought upon the Axis Powers by observing the locations bombed by various Allied air forces. The dots vary in size by the weight of bombs dropped and vary in color by which country the attack belonged to.
 
 ```{r}
-bomber_data_filtered_by_long_lat <- bomber_data |>
-  mutate(Country = ifelse(is.na(Country), "Not Stated", Country)) |>
+bomber_data_filtered_by_long_lat <- bomber_data %>%
+  mutate(Country = ifelse(is.na(Country) | Country == "", "NOT STATED", Country)) |>
   filter(
     between(Target.Latitude, -90, 90) &
     between(Target.Longitude, -180, 180)
-  ) |>
+  )
 
-world_map <- map_data("world")
-ggplot() +
-  mutate(Country = ifelse(is.na(Country), "Not Stated", Country))
-  geom_polygon(data = world_map, aes(x = long, y = lat, group = group), fill = "gray90") +
-  geom_point(data = bomber_data_filtered_by_long_lat, aes(x = Target.Longitude, y = Target.Latitude), color = Country) +
-  coord_map()
+
+  ggplot() +
+    geom_polygon(data = map_data("world"), aes(x = long, y = lat, group = group), fill = "gray70") +
+    geom_point(
+      data = bomber_data_filtered_by_long_lat, 
+      aes(
+        x = Target.Longitude, 
+        y = Target.Latitude, 
+        color = Country, 
+        size = Total.Weight..Tons.), 
+      alpha = 0.01) +
+    coord_map() +
+    labs(
+      title = "All Allied Locations of Bombardment during WW2",
+      x = "Longitude",
+      y = "Latitude",
+      color = "Country",
+      size = "Tonnage of Munitions per Bombardmeent"
+    )
+  
 ```
 
